Implement position controller
