# app/Http/Resources/V1/UserPositionResource.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Http\Resources\V1;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class UserPositionResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return [
+            'latitude' => $this?->latitude ?? null,
+            'longitude' => $this?->longitude ?? null,
+            'datetime' => $this?->created_at ?? null,
+        ];
+    }
+}
